--- a/resources.html
+++ b/resources.html
@@ -18,13 +18,13 @@
         <container class="logotype-container">
         <a class="logotype" href="index.html">NeuroGen</a></container>
 
-        <!-- NAVBAR--> 
-        <nav class="navbar-container"><ul>
-        <li><a href="index.html">Home</a></li>
-        <li class="current"><a href="resources.html">Resources</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <!-- NAVBAR--> 
+    <nav class="navbar-container">
+        <ul class="navbar-list">
+        <li class="navbar-list-item"><a class="navbar-link" href="index.html">Home</a></li>
+        <li class="current navbar-list-item"><a class="navbar-link" href="resources.html">Resources</a></li>
+        <li class="navbar-list-item"><a class="navbar-link" href="contact.html">Contact</a></li>
         </ul></nav>
-
     </header>
 
 
