--- a/error-page.html
+++ b/error-page.html
@@ -5,28 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/style_error.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style_error.css">
     <title>404 | NeuroGen</title>
 </head>
 <body>
 
 <!-- HEADER -->
+
 <header class="header-container">
-       
+
     <!--SITE LOGO-->
     <container class="logotype-container">
     <a class="logotype" href="index.html">NeuroGen</a></container>
 
-<!-- NAVBAR--> 
-<nav class="navbar-container">
-  </nav>
+    <!-- NAVBAR--> 
+    <nav class="navbar">
+    <ul class="navbar-list">
+    <li class="current navbar-list-item"><a class="navbar-link" href="index.html">Home</a></li>
+    <li class="navbar-list-item"><a class="navbar-link" href="resources.html">Resources</a></li>
+    <li class="navbar-list-item"><a class="navbar-link" href="contact.html">Contact</a></li>
+    </ul></nav>
 </header>
 
+
   <!--404 MESSAGE-->
-  <div class="error-message">
-  <h2>404 - Page Not Found</h2>
-  <p>Sorry, the page you were looking for could not be found.</p>
+<div class="error-message-section">
+  <h2 class="error-message-header">404 - Page Not Found</h2>
+  <p class="error-message-text">Sorry, the page you were looking for could not be found.</p>
 </div>
 
   <!-- FOOTER -->
