Remove Unused Assets

--- a/index.html
+++ b/index.html
@@ -98,25 +98,23 @@
                     </a>
                 </li>
             </ul>
+
              <!-- NEWSLETTER -->
             <container class="newsletter-container">
                 <section class="newsletter-section">
                     <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
                     <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                         <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                        <button type="submit" class="newsletter-button" onclick="audio.play();">Subscribe</button>
-                        <script>
-                            const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
-                        </script>
+                        <button type="submit" class="newsletter-button">Subscribe</button>
                     </form>
                 </section>
-                </container>
+            </container>
 
-                <!-- LANDING TEXT  -->
-<div class="landing-text">
-    <h2>Enhance Your Brain.</h2>
-    <h2>Enhance Your Life.</h2>
-</div>
+            <!-- LANDING TEXT  -->
+            <div class="landing-text">
+                <h2>Enhance Your Brain.</h2>
+                <h2>Enhance Your Life.</h2>
+            </div>
 </footer>
 
 </body>
