--- a/article.html
+++ b/article.html
@@ -94,10 +94,7 @@
                     <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
                     <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                         <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                        <button type="submit" class="newsletter-button" onclick="audio.play();">Subscribe</button>
-                        <script>
-                            const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
-                        </script>
+                        <button type="submit" class="newsletter-button">Subscribe</button>
                     </form>
                 </div>
                 </section>
