--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,7 @@
             <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net">
             <input class="contact-form-input" type="email" name="Email" placeholder="Enter Email..." required>
             <textarea class="contact-message-input" name="Message" placeholder="Write a Message..."></textarea>
-            <button class="contact-button" type="submit"  onclick="audio.play();">Send</button>
-            <script>
-                const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
-            </script>
+            <button class="contact-button" type="submit">Send</button>
             </form>
     </section>
 </container>
@@ -86,19 +83,16 @@
             <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                <button type="submit" class="newsletter-button" onclick="audio.play();">Subscribe</button>
-                <script>
-                    const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
-                </script>
+                <button type="submit" class="newsletter-button">Subscribe</button>
             </form>
         </section>
-        </container>
+    </container>
 
-        <!-- LANDING TEXT  -->
-<div class="landing-text">
-<h2>Enhance Your Brain.</h2>
-<h2>Enhance Your Life.</h2>
-</div>
+    <!-- LANDING TEXT  -->
+    <div class="landing-text">
+        <h2>Enhance Your Brain.</h2>
+        <h2>Enhance Your Life.</h2>
+    </div>
 </footer>
 
 </body>
