Replace Unallowed HTML Flow Content Elements

--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
 <header class="header-container">
 
     <!--SITE LOGO-->
-    <container class="logotype-container">
+    <section class="logotype-section">
     <a class="logotype" href="index.html">NeuroGen</a></container>
 
     <!-- NAVBAR--> 
@@ -89,7 +89,7 @@
                 </li>
             </ul>
              <!-- NEWSLETTER -->
-            <section class="newsletter-container">
+            <div class="newsletter-container">
                 <div class="newsletter">
                     <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
                     <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
@@ -97,7 +97,7 @@
                         <button type="submit" class="newsletter-button">Subscribe</button>
                     </form>
                 </div>
-                </section>
+                </div>
 
                 <!-- LANDING TEXT  -->
 <div class="landing-text">
