--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <header class="header-container">
 
     <!--SITE LOGO-->
-    <container class="logotype-container">
+    <section class="logotype-section">
     <a class="logotype" href="index.html">NeuroGen</a></container>
 
     <!-- NAVBAR--> 
