--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 <header class="header-container">
 
     <!--SITE LOGO-->
-    <container class="logotype-container">
+    <section class="logotype-section">
     <a class="logotype" href="index.html">NeuroGen</a></container>
 
     <!-- NAVBAR--> 
@@ -31,7 +31,7 @@
 <!-- RESOURCES SECTION -->
 
 <container class="resource-section-container">
-    <section class="resource-section">
+    <div class="resource-section">
 
     <article class="resource">
         <img class="resource-image" src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
@@ -58,7 +58,7 @@
                 <h2 class="resource-header">Books</h2>
                 <p class="resource-text">Explore!</p></article></a>
             </div>
-    </section>
+    </div>
 </container>
 
 <!-- FOOTER -->
