--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <header class="header-container">
 
     <!--SITE LOGO-->
-    <section class="logotype-section">
+    <div class="logotype-section">
     <a class="logotype" href="index.html">NeuroGen</a>
-    </section>
+    </div>
 
     <!-- NAVBAR--> 
     <nav class="navbar">
