Validate Article page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style_resources.css">
     <link rel="stylesheet" href="./assets/css/style_contact.css">
@@ -18,7 +17,8 @@
 
     <!--SITE LOGO-->
     <section class="logotype-section">
-    <a class="logotype" href="index.html">NeuroGen</a></container>
+    <a class="logotype" href="index.html">NeuroGen</a>
+    </section>
 
     <!-- NAVBAR--> 
     <nav class="navbar">
@@ -78,15 +78,15 @@
         </li>
     </ul>
      <!-- NEWSLETTER -->
-    <container class="newsletter-container">
-        <section class="newsletter-section">
+    <section class="newsletter-container">
+        <div class="newsletter-section">
             <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
                 <button type="submit" class="newsletter-button">Subscribe</button>
             </form>
-        </section>
-    </container>
+        </div>
+    </section>
 
     <!-- LANDING TEXT  -->
     <div class="landing-text">
