--- a/error-page.html
+++ b/error-page.html
@@ -17,7 +17,8 @@
 
     <!--SITE LOGO-->
     <section class="logotype-section">
-    <a class="logotype" href="index.html">NeuroGen</a></container>
+    <a class="logotype" href="index.html">NeuroGen</a>
+    </section>
 
     <!-- NAVBAR--> 
     <nav class="navbar">
