--- a/resources.html
+++ b/resources.html
@@ -11,13 +11,13 @@
 <body>
 
 <!-- HEADER -->
-
 <header class="header-container">
 
     <!--SITE LOGO-->
     <section class="logotype-section">
-    <a class="logotype" href="index.html">NeuroGen</a></container>
-
+    <a class="logotype" href="index.html">NeuroGen</a>
+    </section>
+    
     <!-- NAVBAR--> 
     <nav class="navbar">
     <ul class="navbar-list">
@@ -33,27 +33,30 @@
 <section class="resource-section-container">
     <div class="resource-section">
 
-    <article class="resource">
-        <img class="resource-image" src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
-                <a class="resource-link" target="_blank" href="https://nootropicsexpert.com/nootropics-guide/">
+        <article class="resource">
+            <a class="resource-link" target="_blank" href="https://nootropicsexpert.com/nootropics-guide/">
+                <img class="resource-image" src="./assets/media/img/box_img_1.jpg" alt="Box Image 1">
                 <h2 class="resource-header">Nootropics</h2>
-                <p class="resource-text">Learn about nootropics!</p></article>
+                <p class="resource-text">Learn about nootropics!</p>
             </a> 
+        </article>
 
-    <article class="resource">
-        <img class="resource-image" src="./assets/media/img/box_img_2.png" alt="Box Image 2">
-                <a class="resource-link" target="_blank" href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
+        <article class="resource">
+            <a class="resource-link" target="_blank" href="https://www.verywellmind.com/top-websites-and-games-for-brain-exercise-2224140">
+                <img class="resource-image" src="./assets/media/img/box_img_2.png" alt="Box Image 2"> 
                 <h2 class="resource-header">Games</h2>
-                <p class="resource-text">Games for your brain!</p></article>
+                <p class="resource-text">Games for your brain!</p>
             </a>
-            
-    <article class="resource">
-        <img class="resource-image" src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
-                <a class="resource-link" target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid=">
+        </article>
+
+        <article class="resource">
+            <a class="resource-link" target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid="></a>
+                <img class="resource-image" src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
                 <h2 class="resource-header">Books</h2>
-                <p class="resource-text">Explore!</p></article>
+                <p class="resource-text">Explore!</p>
             </a>
-        </div>
+        </article>
+    </div>
 </section>
 
 <!-- FOOTER -->
