--- a/article.html
+++ b/article.html
@@ -18,7 +18,8 @@
 
     <!--SITE LOGO-->
     <section class="logotype-section">
-    <a class="logotype" href="index.html">NeuroGen</a></container>
+    <a class="logotype" href="index.html">NeuroGen</a>
+    </section>
 
     <!-- NAVBAR--> 
     <nav class="navbar">
@@ -29,24 +30,22 @@
     </ul></nav>
 </header>
 
-</header>
-
 <!-- ARTICLE SECTION -->
 <container class="article-section-container">
     <section class="article-section">
         <article class="article">
             <div class="article-content">
-            <img class="article-image" src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
-            <h3 class="article-header">Have you heard of Noopept?</h3>
-            <p class="article-text">Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
-            Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.
-            </p>
-            <br>
-            <p class="article-text">Here are some key findings from research on Noopept:</p>
-            <li class="article-list article-text"><b>Cognitive Enhancement:</b> Several studies have found that Noopept may enhance cognitive function and memory in both healthy individuals and those with cognitive impairments. For example, a 2013 study published in the Journal of Psychopharmacology found that Noopept improved memory and attention in healthy adult volunteers.</li>
-            <li class="article-list article-text"><b>Neuroprotective Effects:</b> Noopept has been shown to have neuroprotective effects, which may help protect the brain from damage and degeneration. One study published in the journal Neuroscience Letters found that Noopept reduced oxidative stress and inflammation in the brain of rats with Alzheimer's disease.</li>
-            <li class="article-list article-text"><b>Potential for Anxiety and Depression:</b> Some studies have suggested that Noopept may have anxiolytic and antidepressant effects. For example, a 2015 study published in the Journal of Psychopharmacology found that Noopept reduced anxiety-like behavior in rats.</li>
-            <li class="article-list article-text"><b>Mechanisms of Action:</b> Noopept is believed to work by enhancing the activity of acetylcholine and increasing the release of glutamate, a neurotransmitter that is involved in learning and memory. Additionally, Noopept may have antioxidant and anti-inflammatory properties that may help protect the brain from damage.</li>
+                <img class="article-image" src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
+                <h3 class="article-header">Have you heard of Noopept?</h3>
+                <p class="article-text">Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
+                Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.
+                </p>
+                <br>
+                <p class="article-text">Here are some key findings from research on Noopept:</p>
+                <li class="article-list article-text"><b>Cognitive Enhancement:</b> Several studies have found that Noopept may enhance cognitive function and memory in both healthy individuals and those with cognitive impairments. For example, a 2013 study published in the Journal of Psychopharmacology found that Noopept improved memory and attention in healthy adult volunteers.</li>
+                <li class="article-list article-text"><b>Neuroprotective Effects:</b> Noopept has been shown to have neuroprotective effects, which may help protect the brain from damage and degeneration. One study published in the journal Neuroscience Letters found that Noopept reduced oxidative stress and inflammation in the brain of rats with Alzheimer's disease.</li>
+                <li class="article-list article-text"><b>Potential for Anxiety and Depression:</b> Some studies have suggested that Noopept may have anxiolytic and antidepressant effects. For example, a 2015 study published in the Journal of Psychopharmacology found that Noopept reduced anxiety-like behavior in rats.</li>
+                <li class="article-list article-text"><b>Mechanisms of Action:</b> Noopept is believed to work by enhancing the activity of acetylcholine and increasing the release of glutamate, a neurotransmitter that is involved in learning and memory. Additionally, Noopept may have antioxidant and anti-inflammatory properties that may help protect the brain from damage.</li>
             </div>
         </article>
     </section>
