Validate Error Page

--- a/error-page.html
+++ b/error-page.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,10 +30,10 @@
 
 
   <!--404 MESSAGE-->
-<div class="error-message-section">
+<section class="error-message-section">
   <h2 class="error-message-header">404 - Page Not Found</h2>
   <p class="error-message-text">Sorry, the page you were looking for could not be found.</p>
-</div>
+</section>
 
   <!-- FOOTER -->
 <footer class="footer-container">
@@ -71,8 +70,8 @@
         </li>
     </ul>
      <!-- NEWSLETTER -->
-    <container class="newsletter-container">
-        <section class="newsletter-section">
+    <section class="newsletter-container">
+        <div class="newsletter-section">
             <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
@@ -81,17 +80,15 @@
                     const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
                 </script>
             </form>
+        </div>
         </section>
-        </container>
 
-        <!-- LANDING TEXT  -->
-<div class="landing-text">
-<h2>Enhance Your Brain.</h2>
-<h2>Enhance Your Life.</h2>
-</div>
+    <!-- LANDING TEXT  -->
+    <div class="landing-text">
+        <h2>Enhance Your Brain.</h2>
+        <h2>Enhance Your Life.</h2>
+    </div>
 </footer>
-
-
 
 </body>
 </html>
