Validate Resources page Final

--- a/resources.html
+++ b/resources.html
@@ -50,7 +50,7 @@
         </article>
 
         <article class="resource">
-            <a class="resource-link" target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid="></a>
+            <a class="resource-link" target="_blank" href="https://www.goodreads.com/search?q=Nootropics&qid=">
                 <img class="resource-image" src="./assets/media/img/box_img_3.jpg" alt="Box Image 3">
                 <h2 class="resource-header">Books</h2>
                 <p class="resource-text">Explore!</p>
