--- a/resources.html
+++ b/resources.html
@@ -14,9 +14,9 @@
 <header class="header-container">
 
     <!--SITE LOGO-->
-    <section class="logotype-section">
-    <a class="logotype" href="index.html">NeuroGen</a>
-    </section>
+    <div class="logotype-section">
+        <a class="logotype" href="index.html"><img src="/assets/media/img/logo_image.png"></a>
+    </div>
     
     <!-- NAVBAR--> 
     <nav class="navbar">
