Remove unused images from project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--SITE LOGO-->
     <div class="logotype-section">
-        <a class="logotype" href="index.html"><img src="/assets/media/img/logo_image.png"></a>
+        <a class="logotype" href="index.html"><img src="/assets/media/img/logo_image.png" alt="Logo Image"></a>
     </div>
 
     <!-- NAVBAR--> 
