Final Adjustments & Code Check

--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,6 @@
 
 
 <!-- RESOURCES SECTION -->
-
 <section class="resource-section-container">
     <div class="resource-section">
 
@@ -62,33 +61,33 @@
 <!-- FOOTER -->
 <footer class="footer-container">
     <ul class="list-inline social-links">
-        <li class="list-item">
-            <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                <i class="fab fa-facebook" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.facebook.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-facebook" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://twitter.com/sirak_dev">
-                <i class="fab fa-twitter" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://twitter.com/sirak_dev">
+                <i class="social-links-item-bg fab fa-twitter" aria-hidden="true"></i>
                 <span class="sr-only">Twitter</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                <i class="fab fa-linkedin" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
+                <i class="social-links-item-bg fab fa-linkedin" aria-hidden="true"></i>
                 <span class="sr-only">LinkedIn</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                <i class="fab fa-pinterest" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.pinterest.se/sirakdev/">
+                <i class="social-links-item-bg fab fa-pinterest" aria-hidden="true"></i>
                 <span class="sr-only">Pinterest</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                <i class="fab fa-instagram" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.instagram.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-instagram" aria-hidden="true"></i>
                 <span class="sr-only">Instagram</span>
             </a>
         </li>
@@ -96,19 +95,19 @@
 
      <!-- NEWSLETTER -->
     <section class="newsletter-container">
-        <div class="newsletter">
+        <div class="newsletter-section">
             <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                <button type="submit" class="newsletter-button" onclick="audio.play();">Subscribe</button>
+                <button type="submit" class="newsletter-button">Subscribe</button>
             </form>
         </div>
     </section>
 
     <!-- LANDING TEXT  -->
     <div class="landing-text">
-    <h2>Enhance Your Brain.</h2>
-    <h2>Enhance Your Life.</h2>
+        <h2>Enhance Your Brain.</h2>
+        <h2>Enhance Your Life.</h2>
     </div>
 </footer>
 
