--- a/article.html
+++ b/article.html
@@ -13,7 +13,6 @@
 <body>
     
 <!-- HEADER -->
-
 <header class="header-container">
 
     <!--SITE LOGO-->
@@ -55,54 +54,55 @@
 
 <!-- FOOTER -->
 <footer class="footer-container">
-            <ul class="list-inline social-links">
-                <li class="list-item">
-                    <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li class="list-item">
-                    <a target="_blank" href="https://twitter.com/sirak_dev">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>
-                </li>
-                <li class="list-item">
-                    <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <span class="sr-only">LinkedIn</span>
-                    </a>
-                </li>
-                <li class="list-item">
-                    <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
-                        <span class="sr-only">Pinterest</span>
-                    </a>
-                </li>
-                <li class="list-item">
-                    <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>
-                </li>
-            </ul>
-             <!-- NEWSLETTER -->
-            <div class="newsletter-container">
-                <div class="newsletter">
-                    <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
-                    <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
-                        <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                        <button type="submit" class="newsletter-button">Subscribe</button>
-                    </form>
-                </div>
-                </div>
+    <ul class="list-inline social-links">
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.facebook.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+            </a>
+        </li>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://twitter.com/sirak_dev">
+                <i class="social-links-item-bg fab fa-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span>
+            </a>
+        </li>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
+                <i class="social-links-item-bg fab fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">LinkedIn</span>
+            </a>
+        </li>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.pinterest.se/sirakdev/">
+                <i class="social-links-item-bg fab fa-pinterest" aria-hidden="true"></i>
+                <span class="sr-only">Pinterest</span>
+            </a>
+        </li>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.instagram.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-instagram" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
+            </a>
+        </li>
+    </ul>
 
-                <!-- LANDING TEXT  -->
-<div class="landing-text">
-    <h2>Enhance Your Brain.</h2>
-    <h2>Enhance Your Life.</h2>
-</div>
+     <!-- NEWSLETTER -->
+    <section class="newsletter-container">
+        <div class="newsletter-section">
+            <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
+            <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
+                <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
+                <button type="submit" class="newsletter-button">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- LANDING TEXT  -->
+    <div class="landing-text">
+        <h2>Enhance Your Brain.</h2>
+        <h2>Enhance Your Life.</h2>
+    </div>
 </footer>
 
     
