--- a/error-page.html
+++ b/error-page.html
@@ -35,53 +35,51 @@
   <p class="error-message-text">Sorry, the page you were looking for could not be found.</p>
 </section>
 
-  <!-- FOOTER -->
+<!-- FOOTER -->
 <footer class="footer-container">
     <ul class="list-inline social-links">
-        <li class="list-item">
-            <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                <i class="fab fa-facebook" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.facebook.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-facebook" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://twitter.com/sirak_dev">
-                <i class="fab fa-twitter" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://twitter.com/sirak_dev">
+                <i class="social-links-item-bg fab fa-twitter" aria-hidden="true"></i>
                 <span class="sr-only">Twitter</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                <i class="fab fa-linkedin" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
+                <i class="social-links-item-bg fab fa-linkedin" aria-hidden="true"></i>
                 <span class="sr-only">LinkedIn</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                <i class="fab fa-pinterest" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.pinterest.se/sirakdev/">
+                <i class="social-links-item-bg fab fa-pinterest" aria-hidden="true"></i>
                 <span class="sr-only">Pinterest</span>
             </a>
         </li>
-        <li class="list-item">
-            <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                <i class="fab fa-instagram" aria-hidden="true"></i>
+        <li class="social-list-item">
+            <a class="social-links-item" target="_blank" href="https://www.instagram.com/sirak.dev/">
+                <i class="social-links-item-bg fab fa-instagram" aria-hidden="true"></i>
                 <span class="sr-only">Instagram</span>
             </a>
         </li>
     </ul>
+
      <!-- NEWSLETTER -->
     <section class="newsletter-container">
         <div class="newsletter-section">
             <h3 class="newsletter-header">Subscribe To Our Newsletter</h3>
             <form id="newsletter-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <input type="email" class="newsletter-form-input" name="Email" placeholder="Enter Email..." required>
-                <button type="submit" class="newsletter-button" onclick="audio.play();">Subscribe</button>
-                <script>
-                    const audio = new Audio (); audio.src="./assets/media/audio/click_sound.mp3"
-                </script>
+                <button type="submit" class="newsletter-button">Subscribe</button>
             </form>
         </div>
-        </section>
+    </section>
 
     <!-- LANDING TEXT  -->
     <div class="landing-text">
