--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
 
 <!-- CONTACT FORM -->
-<container class="contact-section-container">
+<div class="contact-section-container">
     <section class="contact-section">
             <h2 class="contact-header">Contact Us</h2>
             <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net">
@@ -40,7 +40,7 @@
             <button class="contact-button" type="submit">Send</button>
             </form>
     </section>
-</container>
+</div>
 
 
 <!-- FOOTER -->
