--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
 </header>
 
 <!-- ARTICLE SECTION -->
-<container class="article-section-container">
+<div class="article-section-container">
     <section class="article-section">
         <article class="article">
             <div class="article-content">
@@ -48,7 +48,7 @@
             </div>
         </article>
     </section>
-  </container>
+  </div>
 
 
 
